# parallelplayground

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  proconhelper.cpp  proconhelper.h
src/epolllfq/: CMakeLists.txt  eplfqstream.h  main.cpp
src/lfq/: CMakeLists.txt  ProducerConsumerQueue.h  lfqstream.h  main.cpp
src/lockbuf/: CMakeLists.txt  lockstream.h  main.cpp
src/lockbuftransfer/: CMakeLists.txt  lockstream.cpp  lockstream.h  main.cpp
src/mklfq/: CMakeLists.txt  main.cpp  mklfqstream.h
src/qro/: CMakeLists.txt  cvmatshm.cpp  cvmatshm.h  interface.rep  main.cpp  qrostream.h  sharedmemory.cpp  sharedmemory.h  workerconnector.cpp  workerconnector.h
src/qro/worker/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
